Learned spacing/positioning in CSS + dividing classes in HTML!

--- a/code-solo.css
+++ b/code-solo.css
@@ -1,16 +1,25 @@
 /* CSS styling for code solo */
 
 /* 3. Select the sample-1 class. Using the display property, apply a value of flex. Using the justify-content property, apply a value of flex-start. */
-
-
+.sample1{
+display: flex;
+justify-content: flex-start;
+}
 
 /* 4. Select the sample-2 class. Using the display property, apply a value of flex. Using the justify-content property, apply a value of space-between. */
-
+.sample2{
+display: flex;
+justify-content: flex-start;
+}
 
 
 /* Add the styling for the spicy task below. */
 /* The image should have a position property with value of fixed, a bottom property with a value of 10px, and a right property with a value of 10px. */
-
+img{
+position: fixed;
+bottom: 10px;
+right: 10px;
+}
 
 
 
